--- a/css/style.css
+++ b/css/style.css
@@ -145,6 +145,7 @@ label {
     border-top: 1px solid gray;
     line-height: 1.5;
     font-size: 19px;
+    background-size: cover;
 }
 @media (max-width: 600px){
     .background{
